<resources>
    <string name="app_name">To Do List</string>
    <string name="supervised_by_mohamed_nabil" translatable="false">Supervised by Mohamed Nabil</string>
    <string name="settings">Settings</string>
    <string name="tasks">Tasks</string>
    <string name="add_new_task">Add new Task</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time\n</string>
    <string name="required_field">required field</string>
    <string name="delete">Delete</string>
    <string name="language">Language</string>
    <string name="mode">Mode</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="edit_task">Edit Task</string>
    <string name="save">Save</string>
    <string name="task_description">Description</string>
    <string name="task_title">Title</string>
    <string name="cancel">Cancel</string>
    <string name="delete_confirmation_message">Are you sure you want to delete this task?</string>

    <array name="Languages">
        <item>@string/english</item>
        <item>@string/arabic</item>
    </array>

    <array name="Modes">
        <item>@string/light</item>
        <item>@string/dark</item>
    </array>

</resources>