<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.fragments.SettingsFragment">

    <View
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/blue"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/language_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/language"
        android:textColor="@color/onBackground"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_view" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/languages_menu"
        style="@style/outlinedInputText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/language_tv"
        app:layout_constraintTop_toBottomOf="@+id/language_tv">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/english"
            android:inputType="none"
            android:textColor="@color/blue"
            app:simpleItems="@array/Languages" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/mode_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/mode"
        android:textColor="@color/onBackground"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languages_menu" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/modes_menu"
        style="@style/outlinedInputText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/mode_tv"
        app:layout_constraintTop_toBottomOf="@+id/mode_tv">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/light"
            android:inputType="none"
            android:textColor="@color/blue"
            app:simpleItems="@array/Modes" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>