<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.EditTaskActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/app_name"
            app:titleTextAppearance="@style/AppBarTitle"
            app:titleTextColor="@color/white">

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <View
            android:id="@+id/top_view"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/blue"
            app:layout_constraintTop_toTopOf="parent"

            />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="24dp"
            android:backgroundTint="@color/bottom_nav_bg_color"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:layout_constraintHeight_percent="0.8"
            app:layout_constraintTop_toTopOf="@+id/top_view"
            app:strokeColor="@android:color/transparent"

            >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="24dp">

                    <TextView
                        android:id="@+id/edit_task_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:gravity="center"
                        android:text="@string/edit_task"
                        android:textColor="@color/onBackground"
                        android:textSize="20sp"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/task_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:fontFamily="@font/inter"
                        android:hint="@string/task_title"
                        android:paddingVertical="16dp"
                        android:textColorHint="@color/bottom_sheet_text_color_hint"
                        android:textSize="18sp"
                        app:layout_constraintTop_toBottomOf="@+id/edit_task_tv" />


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/task_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/inter"
                        android:hint="@string/task_description"
                        android:lines="3"
                        android:textColorHint="@color/bottom_sheet_text_color_hint"
                        android:textSize="18sp"
                        app:layout_constraintTop_toBottomOf="@+id/task_title" />


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/select_date_til"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        app:layout_constraintEnd_toStartOf="@+id/select_time_til"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="spread"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/task_description"

                        >

                        <TextView
                            android:id="@+id/select_date_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter"
                            android:gravity="center"
                            android:hint="@string/select_date"
                            android:padding="16dp"
                            android:textColor="?colorOnBackground"
                            android:textColorHint="?colorOnBackground"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/select_time_til"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/select_date_til"
                        app:layout_constraintTop_toBottomOf="@+id/task_description">

                        <TextView
                            android:id="@+id/select_time_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter"
                            android:gravity="center"
                            android:hint="@string/select_time"
                            android:padding="16dp"
                            android:textColor="?colorOnBackground"
                            android:textColorHint="?colorOnBackground"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/save_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="48dp"
                        android:fontFamily="@font/inter"
                        android:paddingVertical="12dp"
                        android:text="@string/save"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:cornerRadius="25dp"
                        app:layout_constraintTop_toBottomOf="@+id/select_time_til"

                        />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>